2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml,
	  MonoDevelop.VersionControl/VersionControl.addin.xml: Bump MD version.

2007-09-20  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificateDialog.cs,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.UserPasswordDialog.cs,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/generated.cs,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs,
	  MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.SslServerTrustDialog.cs:
	  Regenerated GUI files.

2007-09-15  Andrés G. Aragoneses <knocte@gmail.com>

	* MonoDevelop.VersionControl.Subversion/gtk-gui/MonoDevelop.VersionControl.Subversion.Gui.ClientCertificatePasswordDialog.cs:
	* MonoDevelop.VersionControl.Subversion/gtk-gui/gui.stetic:
	Use a normal title for the window.

2007-09-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.SelectRepositoryDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/generated.cs,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.EditRepositoryDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.UrlBasedRepositoryEditor.cs,
	  MonoDevelop.VersionControl/gtk-gui/MonoDevelop.VersionControl.Dialogs.CommitDialog.cs,
	  MonoDevelop.VersionControl/gtk-gui/gui.stetic: Increase range of port
	  selector in the repository information widget.

2007-09-08  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Diffs.cs:
	  Dispose the file watchers when disposing the view. Fixes bug #82721.

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 
