@@ -1,3 +1,8 @@
+2007-10-03  Zach Lute <zach.lute@gmail.com>
+
+	* MonoDevelop.VersionControl/MonoDevelop.VersionControl.Views/Diffs.cs:  Only dispose of
+	  FileSystemWatchers if they were actually created. (Bug #330505)
+
 2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml,
